--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,5 +1,6 @@
 @use 'global/_reset';
 @use 'global/_variables';
+@use 'global/_mixins';
 @use 'global/accessibility';
 @use 'global/_typography';
 
