--- a/_sass/global/_variables.scss
+++ b/_sass/global/_variables.scss
@@ -1,6 +1,13 @@
 @use 'fonts';
 
-// Color variables
+// Breakpoints (mobile-first)
+$breakpoint-xs: 375px; // Phone
+$breakpoint-sm: 576px; // Tablet
+$breakpoint-md: 768px; // Desktop
+$breakpoint-lg: 992px; // Large Desktop
+$breakpoint-xl: 1200px; // Extra large Desktop
+
+// Colors
 $colo-primary: #b31917; // Scarlet
 $colo-primary-bright: #de1f1d; // Rooster Comb
 $colo-primary-dark: #5e0d0c; // Redrum
@@ -45,11 +52,15 @@ $font-weight-black: 900;
 $letter-spacing-none: 0px;
 $letter-spacing-tight: 0.36px;
 
-// Border radius
-$border-radius-sm: 0.25%;
-$border-radius: 1%;
-$border-radius-lg: 2%;
-$border-radius-full: 100%;
+// Spacing
+$spacing-xs: 0.25rem; // 4px
+$spacing-sm: 0.5rem; // 8px
+$spacing-base: 1rem;
+$spacing-md: 1.25rem;
+$spacing-lg: 1.5rem; // 24px
+$spacing-xl: 2rem; // 32px
+$spacing-xxl: 3.75rem; // 60px
+$spacing-xxxl: 5rem; // 80px
 
 // Containers
 $container-width: 1200px;
@@ -69,16 +80,6 @@ $container-padding-lg: $spacing-xl; // Larger screens
 $header-height: 5rem; // 80px Mobile header height
 $header-height-lg: 6.5rem; // 105px Desktop header height
 
-// Spacing
-$spacing-xs: 0.25rem; // 4px
-$spacing-sm: 0.5rem; // 8px
-$spacing-base: 1rem;
-$spacing-md: 1.25rem;
-$spacing-lg: 1.5rem; // 24px
-$spacing-xl: 2rem; // 32px
-$spacing-xxl: 3.75rem; // 60px
-$spacing-xxxl: 5rem; // 80px
-
 // Effects
 $drop-shadow: 0px 4px 13px 0px rgba(15, 15, 15, 0.25);
 $drop-shadow-sm: 0px 4px 8px 0px rgba(15, 15, 15, 0.15);
@@ -86,9 +87,8 @@ $drop-shadow-sm: 0px 4px 8px 0px rgba(15, 15, 15, 0.15);
 $transition-fast: 0.2s ease-in-out;
 $transition: 0.3s ease-in-out;
 
-// Breakpoint variables mobile-first
-$breakpoint-xs: 375px; // Phone
-$breakpoint-sm: 576px; // Tablet
-$breakpoint-md: 768px; // Desktop
-$breakpoint-lg: 992px; // Large Desktop
-$breakpoint-xl: 1200px; // Extra large Desktop
+// Border radius
+$border-radius-sm: 0.25%;
+$border-radius: 1%;
+$border-radius-lg: 2%;
+$border-radius-full: 100%;
