Adds Sass variable cleanup and removes index markdown file - duplicate

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,9 +17,11 @@ description: Uplifting communities through technology
 </head>
 
 <body>
-  {% include navigation.html %}
-  {{ content }}
-  {% include footer.html %}
+  <main>
+    {% include navigation.html %}
+    {{ content }}
+    {% include footer.html %}
+  </main>
 </body>
 
 </html>
