--- a/_sass/global/_variables.scss
+++ b/_sass/global/_variables.scss
@@ -8,9 +8,9 @@ $breakpoint-lg: 992px; // Large Desktop
 $breakpoint-xl: 1200px; // Extra large Desktop
 
 // Colors
-$colo-primary: #b31917; // Scarlet
-$colo-primary-bright: #de1f1d; // Rooster Comb
-$colo-primary-dark: #5e0d0c; // Redrum
+$color-primary: #b31917; // Scarlet
+$color-primary-bright: #de1f1d; // Rooster Comb
+$color-primary-dark: #5e0d0c; // Redrum
 $color-secondary: #17b51aff; // Lime Green
 $color-secondary-light: #1cde1fff; // Electric Lime
 $color-secondary-dark: #0a510c; // Forest
