--- a/_sass/layout/_layout.scss
+++ b/_sass/layout/_layout.scss
@@ -22,7 +22,7 @@
 }
 
 .feature-section {
-	background-color: $white;
+	background-color: $color-white;
 	// padding: $spacing-xl;
 
 	@container (min-width: #{$container-lg}) {
