--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -10,8 +10,6 @@
 
 @use 'components/_button';
 @use 'components/_hero';
-@use 'components/_cta';
-@use 'components/_faq';
-@use 'components/_map';
-
-@use '_admin';
+// @use 'components/_cta';
+// @use 'components/_faq';
+// @use 'components/_map';
