--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -12,7 +12,7 @@ body {
 header.main-header {
 	display: flex;
 	position: fixed;
-	background-color: $white;
+	background-color: $color-white;
 	box-shadow: $drop-shadow;
 	width: 100%;
 	z-index: 1000;
@@ -42,7 +42,7 @@ header.main-header {
 		}
 
 		.header-title {
-			color: $primary-color;
+			color: $color-primary;
 		}
 	}
 }
@@ -62,7 +62,7 @@ header.main-header {
 		display: block;
 		width: 100%;
 		height: 3px;
-		background-color: $secondary-color;
+		background-color: $color-secondary;
 		margin-bottom: 5px;
 		transition: transform 0.3s ease, opacity 0.3s ease;
 
@@ -98,7 +98,7 @@ header.main-header {
 	right: 0;
 	height: 100%;
 	width: 70%;
-	background-color: $white;
+	background-color: $color-white;
 	box-shadow: $drop-shadow;
 	z-index: 1000;
 	padding: $spacing-xxxl $spacing-lg;
@@ -114,13 +114,13 @@ header.main-header {
 			margin-bottom: $spacing-md;
 
 			a {
-				font-family: $font-heading;
+				font-family: $font-family-display;
 				font-size: $font-size-sm;
-				color: $secondary-color;
+				color: $color-secondary;
 				text-decoration: none;
 
 				&:hover {
-					color: $primary-color;
+					color: $color-primary;
 				}
 			}
 		}
