base styles for header, footer, content

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,21 +1,22 @@
 <footer class="footer">
-  <div class="social-media">
-    <a href="https://www.facebook.com/RizeDigital" target="_blank">Facebook</a>
-    <a href="https://twitter.com/RizeDigital" target="_blank">Twitter</a>
-    <a href="https://www.linkedin.com/company/rizedigital" target="_blank">LinkedIn</a>
-    <a href="https://www.instagram.com/rizedigital" target="_blank">Instagram</a>
-    <a href="https://www.youtube.com/c/RizeDigital" target="_blank">YouTube</a>
-  </div>
   <div class="container">
-    <p class="text-center">
-      &copy; {{ site.time | date: '%Y' }} {{ site.title }}. All rights reserved.
-    </p>
-    <p class="text-center">
-      <a href="{{ site.url }}/privacy-policy.html">Privacy Policy</a> |
-      <a href="{{ site.url }}/terms-of-service.html">Terms of Service</a>
-    </p>
-  </div>
-  <div class="back-to-top">
-    <a href="#top">Back to Top</a>
+    <div class="social-media">
+      <a href="https://www.linkedin.com/company/rizedigital" target="_blank">LinkedIn</a>
+      <a href="https://www.facebook.com/RizeDigital" target="_blank">Facebook</a>
+      <a href="https://www.instagram.com/rizedigital" target="_blank">Instagram</a>
+      <a href="https://www.youtube.com/c/RizeDigital" target="_blank">YouTube</a>
+    </div>
+    <div class="footer-links">
+      <p class="text-center">
+        &copy; {{ site.time | date: '%Y' }} {{ site.title }}. All rights reserved.
+      </p>
+      <p class="text-center">
+        <a href="{{ site.url }}/privacy-policy.html">Privacy Policy</a> |
+        <a href="{{ site.url }}/terms-of-service.html">Terms of Service</a>
+      </p>
+    </div>
+    <!-- <div class="back-to-top">
+      <a href="#top">Back to Top</a>
+    </div> -->
   </div>
 </footer>
