--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,11 +17,11 @@ description: Uplifting communities through technology
 </head>
 
 <body>
+  {% include header.html %}
   <main>
-    {% include navigation.html %}
     {{ content }}
-    {% include footer.html %}
   </main>
+  {% include footer.html %}
 </body>
 
 </html>
