--- a/_sass/layout/_layout.scss
+++ b/_sass/layout/_layout.scss
@@ -1,9 +1,17 @@
 @use '../global/variables' as *;
 
+main {
+	margin-top: $header-height;
+
+	@container (min-width: #{$container-lg}) {
+		margin-top: $header-height-lg;
+	}
+}
+
 .container {
 	display: flex;
 	margin: 0 auto;
-	padding: $spacing-lg $spacing-md;
+	padding: $spacing-lg 0;
 	width: 100%;
 
 	@container (min-width: #{$container-lg}) {
