Adds about.html, a bunch of layout fixes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,15 +1,15 @@
-<footer class="footer">
-  <div class="container">
+<footer>
+  <div class="footer-container">
     <div class="social-media">
       <a href="https://www.linkedin.com/company/rizedigital" target="_blank">LinkedIn</a>
       <a href="https://www.facebook.com/RizeDigital" target="_blank">Facebook</a>
       <a href="https://www.instagram.com/rizedigital" target="_blank">Instagram</a>
       <a href="https://www.youtube.com/c/RizeDigital" target="_blank">YouTube</a>
     </div>
-    <div class="footer-links">
-      <p class="text-center">
+    <div class="subfooter">
+      <span class="text-center">
         &copy; {{ site.time | date: '%Y' }} {{ site.title }}. All rights reserved.
-      </p>
+      </span>
       <p class="text-center">
         <a href="{{ site.url }}/privacy-policy.html">Privacy Policy</a> |
         <a href="{{ site.url }}/terms-of-service.html">Terms of Service</a>
