--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,11 +17,13 @@ description: Uplifting communities through technology
 </head>
 
 <body>
-  {% include header.html %}
-  <main>
-    {{ content }}
-  </main>
-  {% include footer.html %}
+  <div class="wrapper">
+    {% include header.html %}
+    <main>
+      {{ content }}
+    </main>
+    {% include footer.html %}
+  </div>
 </body>
 
 </html>
