--- a/_sass/global/_variables.scss
+++ b/_sass/global/_variables.scss
@@ -64,7 +64,7 @@ $spacing-xxl: 3.75rem; // 60px
 $spacing-xxxl: 5rem; // 80px
 
 // Containers
-$container-width: 90%;
+$container-width: 1400px;
 
 // Containers - Maximum content widths at each breakpoint
 $container-xs: 23.4375rem; // 375px
