--- a/_sass/global/_typography.scss
+++ b/_sass/global/_typography.scss
@@ -6,113 +6,102 @@ body {
 	background-color: $color-white;
 }
 
-h1 {
-	font-family: $font-family-display;
-	font-weight: $font-weight-light;
-	font-size: $font-size-jumbo;
-	line-height: $line-height-lg;
-	letter-spacing: $letter-spacing-tight;
-
-	@container (min-width: #{$container-lg}) {
+main {
+	h1 {
+		font-family: $font-family-display;
+		font-weight: $font-weight-light;
 		font-size: $font-size-jumbo;
 		line-height: $line-height-lg;
+		letter-spacing: $letter-spacing-tight;
+
+		@container (min-width: #{$container-lg}) {
+			font-size: $font-size-jumbo;
+			line-height: $line-height-lg;
+		}
 	}
-}
 
-h2 {
-	font-weight: $font-weight-light;
-	font-size: $font-size-xl;
-	line-height: $line-height-lg;
-	letter-spacing: $letter-spacing-none;
-}
-
-h3 {
-	font-weight: $font-weight-light;
-	font-size: $font-size-lg;
-	line-height: $line-height-md;
-	letter-spacing: $letter-spacing-none;
-}
-
-h4 {
-	font-weight: $font-weight-regular;
-	font-size: $font-size-body;
-	line-height: $line-height-sm;
-	letter-spacing: $letter-spacing-none;
-}
-
-.heading-wrapper {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	padding: $spacing-xxl;
-	gap: $spacing-lg;
-
-	@container (min-width: #{$container-lg}) {
-		text-align: left;
+	h2 {
+		font-weight: $font-weight-light;
+		font-size: $font-size-xl;
+		line-height: $line-height-lg;
+		letter-spacing: $letter-spacing-none;
 	}
-}
 
-p {
-	font-weight: $font-weight-regular;
-	font-size: $font-size-body;
-	line-height: $line-height-md;
-	letter-spacing: $letter-spacing-none;
-}
-
-a {
-	color: $color-primary;
-	text-decoration: none;
-
-	&:hover {
-		text-decoration: underline;
-	}
-}
-
-ul {
-	list-style: none;
-	padding: 0;
-	margin: 0;
-}
-
-li {
-	margin: 0;
-	padding: 0;
-}
-
-details {
-	summary {
-		display: block;
-		font-family: $font-family-display;
+	h3 {
+		font-weight: $font-weight-light;
 		font-size: $font-size-lg;
-		font-weight: 600;
 		line-height: $line-height-md;
 		letter-spacing: $letter-spacing-none;
-		padding: $spacing-lg 0;
-		cursor: pointer;
+	}
 
-		svg {
-			margin-left: $spacing-sm;
-			transform: rotate(0deg);
-			transition: transform 0.3s ease;
+	h4 {
+		font-weight: $font-weight-regular;
+		font-size: $font-size-body;
+		line-height: $line-height-sm;
+		letter-spacing: $letter-spacing-none;
+	}
 
-			&[open] {
-				transform: rotate(90deg);
-			}
+	p {
+		font-weight: $font-weight-regular;
+		font-size: $font-size-body;
+		line-height: $line-height-md;
+		letter-spacing: $letter-spacing-none;
+	}
 
-			@container (min-width: #{$container-lg}) {
-				display: none;
+	a {
+		color: $color-primary;
+		text-decoration: none;
+
+		&:hover {
+			text-decoration: underline;
+		}
+	}
+
+	ul {
+		list-style: none;
+		padding: 0;
+		margin: 0;
+	}
+
+	li {
+		margin: 0;
+		padding: 0;
+	}
+
+	details {
+		summary {
+			display: block;
+			font-family: $font-family-display;
+			font-size: $font-size-lg;
+			font-weight: 600;
+			line-height: $line-height-md;
+			letter-spacing: $letter-spacing-none;
+			padding: $spacing-lg 0;
+			cursor: pointer;
+
+			svg {
+				margin-left: $spacing-sm;
+				transform: rotate(0deg);
+				transition: transform 0.3s ease;
+
+				&[open] {
+					transform: rotate(90deg);
+				}
+
+				@container (min-width: #{$container-lg}) {
+					display: none;
+				}
 			}
 		}
 	}
-}
 
-address {
-	font-style: normal;
-}
+	address {
+		font-style: normal;
+	}
 
-strong {
-	font-weight: $font-weight-bold;
+	strong {
+		font-weight: $font-weight-bold;
+	}
 }
 
 nav ul {
@@ -146,8 +135,22 @@ nav ul {
 	}
 }
 
+/* Utility */
 .text-centered {
 	text-align: center;
+}
+
+.heading-wrapper {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding: $spacing-xxl;
+	gap: $spacing-lg;
+
+	@container (min-width: #{$container-lg}) {
+		text-align: left;
+	}
 }
 
 .heading-container {
