--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,14 +1,16 @@
 <section class="hero">
-  <div class="container hero-content">
-    {% if page.image %}
-    <img src="{{ page.image }}" alt="{{ page.title }}">
-    {% endif %}
-
+  <div class="container hero-container">
     <div class="hero-text">
-      <h1>{{ page.title }}</h1>
-      {% if page.subtitle %}
-      <h2>{{ page.subtitle }}</h2>
+      <h1>{{ page.hero-title }}</h1>
+      {% if page.hero-subtitle %}
+      <h2>{{ page.hero-subtitle }}</h2>
       {% endif %}
     </div>
+
+    {% if page.hero-image %}
+    <div class="hero-image">
+      <img src="{{ page.hero-image }}" alt="{{ page.title }}">
+    </div>
+    {% endif %}
   </div>
 </section>
