--- a/_sass/components/_hero.scss
+++ b/_sass/components/_hero.scss
@@ -2,14 +2,18 @@
 
 .hero {
 	.hero-container {
+		align-items: center;
+		background-color: $color-black;
+		color: $color-white;
 		display: grid;
 		grid-template-columns: 1fr;
 		gap: 1.5rem;
 		max-width: 100%;
+		padding-top: 0;
+		padding-bottom: 0;
 
 		@container (min-width: #{$breakpoint-lg}) {
 			grid-template-columns: 2fr 2fr;
-			justify-items: flex-end;
 		}
 
 		> div {
@@ -22,19 +26,10 @@
 				padding: $spacing-xxl $spacing-lg;
 
 				@container (min-width: #{$breakpoint-xl}) {
-					max-width: 70%;
-					justify-content: center;
-					align-items: flex-start;
-					padding: 0;
-				}
-
-				.hero-icon {
-					width: 200px;
-					margin: 0 auto;
-
-					@container (min-width: #{$breakpoint-xl}) {
-						margin: 0;
-					}
+					// max-width: 70%;
+					// justify-content: center;
+					// align-items: flex-start;
+					// padding: 0;
 				}
 			}
 
