--- a/_sass/components/_button.scss
+++ b/_sass/components/_button.scss
@@ -3,31 +3,26 @@
 button,
 a.button,
 .button a {
+	color: $color-white;
 	display: flex;
 	font-family: $font-family-display;
-	font-weight: 700;
-	font-size: $font-size-sm;
+	font-size: $font-size-md;
+	font-weight: $font-weight-bold;
 	letter-spacing: $letter-spacing-tight;
+	line-height: $line-height-xl;
 	justify-content: center;
-	align-items: center;
 	text-align: center;
-	// vertical-align: middle;
 	border-radius: $border-radius-lg;
-	border: 2px solid $color-secondary;
-	box-shadow: $drop-shadow-sm;
-	gap: $spacing-sm;
-	padding: $spacing-sm $spacing-md;
-	width: auto;
+	border: 2px solid $color-white;
+	padding: $spacing-sm $spacing-xl;
+	text-transform: uppercase;
 	transition: all $transition;
 	cursor: pointer;
 
-	@container (min-width: #{$container-lg}) {
-		border-radius: $border-radius;
-	}
-
 	&:hover {
-		background-color: $color-secondary;
-		color: $color-white;
+		background-color: $color-white;
+		border-color: $color-white;
+		color: $color-black;
 		text-decoration: none;
 	}
 }
