--- a/_sass/global/_typography.scss
+++ b/_sass/global/_typography.scss
@@ -26,6 +26,7 @@ main {
 		font-size: $font-size-xl;
 		line-height: $line-height-lg;
 		letter-spacing: $letter-spacing-none;
+		margin-bottom: $spacing-xxl;
 	}
 
 	h3 {
