--- a/_sass/global/_variables.scss
+++ b/_sass/global/_variables.scss
@@ -38,6 +38,7 @@ $font-size-sm: 1rem; // 16px, Small (buttons)
 $font-size-xs: 0.875rem; // 14px, Extra extra small (copyright)
 
 // Line height variables
+$line-height-xl: 2;
 $line-height-lg: 1.5; // For body text and paragraphs
 $line-height-md: 1.3; // For UI elements, buttons, small text
 $line-height-sm: 1.2; // For headings (h2, h3)
@@ -90,6 +91,6 @@ $transition: 0.3s ease-in-out;
 
 // Border radius
 $border-radius-sm: 0.25%;
-$border-radius: 1%;
-$border-radius-lg: 2%;
+$border-radius: 12px;
+$border-radius-lg: 30px;
 $border-radius-full: 100%;
