adds What we do and feature component, ugly css grid

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -7,9 +7,11 @@
 @use 'layout/_layout';
 @use 'layout/_header';
 @use 'layout/_footer';
+@use 'layout/_bento';
 
 @use 'components/_button';
 @use 'components/_hero';
+@use 'components/_feature';
 // @use 'components/_cta';
 // @use 'components/_faq';
 // @use 'components/_map';
