beautiful feature section

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -4,7 +4,7 @@
       <h1>{{ page.hero-title }}</h1>
 
       {% if page.hero-subtitle %}
-      <h2>{{ page.hero-subtitle }}</h2>
+      <p class="subtitle">{{ page.hero-subtitle }}</p>
       {% endif %}
 
       {% if page.hero-cta-url %}
