--- a/_sass/global/_typography.scss
+++ b/_sass/global/_typography.scss
@@ -47,8 +47,8 @@ main {
 
 	p {
 		font-weight: $font-weight-regular;
-		font-size: $font-size-body;
-		line-height: $line-height-md;
+		font-size: $font-size-lg;
+		line-height: $line-height-lg;
 		letter-spacing: $letter-spacing-none;
 	}
 
