--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -7,6 +7,7 @@ body {
 header {
 	position: fixed;
 	background-color: $color-white;
+	// box-shadow: $drop-shadow-sm;
 	height: $header-height;
 	width: 100%;
 	z-index: 1000;
