--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -12,6 +12,6 @@
 @use 'components/_button';
 @use 'components/_hero';
 @use 'components/_feature';
-// @use 'components/_cta';
+@use 'components/_cta';
 // @use 'components/_faq';
 // @use 'components/_map';
