--- a/_sass/components/_cta.scss
+++ b/_sass/components/_cta.scss
@@ -63,14 +63,21 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	text-align: center;
 	align-items: center;
 	gap: $spacing-lg;
-	width: 100%;
+	margin: 0 auto;
+	max-width: 960px;
 	padding: $spacing-xxl;
 
-	@container (min-width: #{$container-lg}) {
-		flex-direction: row;
-		gap: $spacing-lg;
-		padding: $spacing-xxl;
+	p {
+		font-family: $font-family-serif;
+		font-style: italic;
+	}
+
+	.button-container {
+		.button {
+			justify-self: center;
+		}
 	}
 }
