--- a/_sass/layout/_bento.scss
+++ b/_sass/layout/_bento.scss
@@ -11,6 +11,7 @@ $breakpoint-md: 768px;
 
 	@media (min-width: $breakpoint-md) {
 		gap: $spacing-xxxl;
+		padding: 0 $spacing-xxl;
 	}
 }
 
@@ -55,7 +56,7 @@ $breakpoint-md: 768px;
 		gap: $spacing-md;
 
 		@media (min-width: $breakpoint-md) {
-			padding: $spacing-xxxl;
+			padding: $spacing-xxxl $spacing-xxl;
 		}
 
 		&.bento-image-wrapper {
