--- a/_sass/layout/_layout.scss
+++ b/_sass/layout/_layout.scss
@@ -23,9 +23,7 @@ main {
 
 	@container (min-width: #{$container-lg}) {
 		flex-direction: row;
-		// max-width: $container-width;
-		padding-top: $spacing-xxxl;
-		padding-bottom: $spacing-xxxl;
+		padding: $spacing-xxxl $spacing-xl;
 	}
 
 	&.column {
