Adds images to homepage and content to about page

--- a/_sass/global/_typography.scss
+++ b/_sass/global/_typography.scss
@@ -169,8 +169,10 @@ nav ul {
 	justify-content: center;
 	text-align: center;
 	gap: $spacing-lg;
+	padding: $spacing-xl;
 
-	@container (min-width: #{$container-lg}) {
+	@container (min-width: #{$breakpoint-lg}) {
+		padding: $spacing-xxxl $spacing-xxl;
 		text-align: left;
 	}
 }
