--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -3,6 +3,7 @@
 @use 'global/_mixins';
 @use 'global/accessibility';
 @use 'global/_typography';
+@use 'global/media';
 
 @use 'layout/_layout';
 @use 'layout/_header';
