grow and learn page content and images

--- a/_includes/feature.html
+++ b/_includes/feature.html
@@ -17,7 +17,7 @@ Feature component for bento grid
       alt="{{ include.image_alt }}"
       class="bento-image" />
   </div>
-  <div class="bento-section">
+  <div class="bento-section text-container">
     <h3>{% if include.icon %}{{ include.icon }} {% endif %}{{ include.title }}</h3>
     <p class="bento-description">
       {{ include.description }}
