--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 <footer>
   <div class="footer-container">
     <div class="social-media">
-      <a href="https://www.linkedin.com/company/rizedigital" target="_blank">LinkedIn</a>
-      <a href="https://www.facebook.com/RizeDigital" target="_blank">Facebook</a>
-      <a href="https://www.instagram.com/rizedigital" target="_blank">Instagram</a>
-      <a href="https://www.youtube.com/c/RizeDigital" target="_blank">YouTube</a>
+      <a href="https://www.linkedin.com/company/connectdigital" target="_blank">LinkedIn</a>
+      <a href="https://www.facebook.com/connectDigital" target="_blank">Facebook</a>
+      <a href="https://www.instagram.com/connectdigital" target="_blank">Instagram</a>
+      <a href="https://www.youtube.com/c/connectDigital" target="_blank">YouTube</a>
     </div>
     <div class="subfooter">
       <span class="text-center">
