--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -2,6 +2,7 @@
 @use 'global/_variables';
 @use 'global/_mixins';
 @use 'global/accessibility';
+@use 'global/_color';
 @use 'global/_typography';
 @use 'global/_media';
 
